    based on a last-appearance record (LAR) construction.

  - The new function is_liveness() and is_liveness_automaton() can be
    used to check whether a formula or an automaton represents a
    liveness property.

  - Two new functions count_univbranch_states() and
    count_univbranch_edges() can help measuring the amount of
    universal branching in alternating automata.

  Bugs fixed:

  - acc_cond::is_generalized_rabin() and
    acc_cond::is_generalized_streett() did not recognize the cases
    were a single generalized pair is used.

  - The pair of acc_cond::mark_t returned by
    acc_code::used_inf_fin_sets(), and the pair (bool,
    vector_rs_pairs) by acc_cond::is_rabin_like() and
    acc_cond::is_streett_like() were not usable in Python.

  - Many object types had __repr__() methods that would return the
    same string as __str__(), contrary to Python usage where repr(x)
    should try to show how to rebuild x.  The following types have
    been changed to follow this convention:
       spot.acc_code
       spot.acc_cond
       spot.atomic_prop_set
       spot.formula
       spot.mark_t
       spot.twa_run (__repr__ shows type and address)
       spot.twa_word (likewise, but _repr_latex_ used in notebooks)

    Note that this you were relying on the fact that Jupyter calls
    repr() to display returned values, you may want to call print()
    explicitely if you prefer the old representation.

  - Fix compilation under Cygwin and Alpine Linux, both choking
    on undefined secure_getenv().

New in spot 2.6.3 (2018-10-17)

  Bugs fixed:

  - Running "ltl2tgba -B" on formulas of the type FG(safety) would
    unexpectedly use a co-Büchi automaton as an intermediate step.
    This in turn caused "ltl2tgba -U -B" to not produce unambiguous
    automata.

  - ltl2tgba --low now disables the "gf-guarantee" feature, as
    documented.

  - ltlfilt's --accept-word and --reject-word options were ignored
    unless used together.
