@@ -103,6 +103,16 @@ test `autfilt -c --is-stutter-invariant input` = 0
 grep '!deterministic' input.2
 grep '!stutter-invariant' input.2
 
+# From an email by František Blahoudek and Mikuláš Klokočka
+ltl2tgba 'X(a & GF(a | Gb))' > input
+grep stutter input && exit 1
+grep deterministic input && exit 1
+# This will involve a complementation
+run 0 autfilt -H1.1 --check=stutter input > input.2
+test `autfilt -c --is-stutter-invariant input` = 0
+grep '!deterministic' input.2
+grep '!stutter-invariant' input.2
+
 
 # From an email by Anton Pirogov
 cat >pirogov <<EOF
